Review Request 2733 propdata scripts